--- a/www/css/index.css
+++ b/www/css/index.css
@@ -5,7 +5,7 @@ body, html {
     box-sizing: border-box;
 }
 
-header {
+#header {
     background-color: #303030;
     color: #fff;
     padding: 1% 2%;
