--- a/www/css/index.css
+++ b/www/css/index.css
@@ -11,8 +11,10 @@ body, html {
     padding: 1% 2%;
     margin-bottom: 0;
     align-items: center;
+    align-content: center;
 }
 
 h1 {
+    align-self: center;
     font-size: xx-large;
 }
