--- a/www/css/index.css
+++ b/www/css/index.css
@@ -22,3 +22,27 @@ h1 {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
 }
+
+#input{
+    border: 1px solid white;
+    background-color: #333;
+    color: white;
+    padding: 1%;
+    text-align: center;
+}
+
+#button {
+    border: 1px solid white;
+    background-color: #333;
+    color: white;
+    padding: 1%;
+    margin-top: 20px;
+}
+
+#button:hover {
+    background-color: #252525;
+}
+
+#button:active{
+    background-color: #1f1f1f;
+}
