--- a/www/css/end.css
+++ b/www/css/end.css
@@ -36,7 +36,7 @@ nav ul li {
     display: inline-flex;
     padding-right: 10px;
     padding-left: 10px;
-    margin: 0 2px
+    margin: 0 0
 }
 
 input[type="submit"]{
@@ -46,6 +46,7 @@ input[type="submit"]{
     height: 50px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
+    padding: 0 0;
 }
 
 
@@ -54,7 +55,7 @@ nav ul li:hover{
 }
 
 nav ul li:active{
-    background-color: #252525;
+    background-color: #1f1f1f;
 }
 
 #content {
