--- a/www/css/end.css
+++ b/www/css/end.css
@@ -45,11 +45,14 @@ nav ul li {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     padding: 0 10px;
-    
 }
 
 #button:hover{
-    background-color: #2a2a2a;
+    background-color: #202020;
+}
+
+#button:active{
+    background-color: #1a1a1a;
 }
 
 #content {
