--- a/www/css/index.css
+++ b/www/css/index.css
@@ -7,7 +7,7 @@ body, html {
 }
 
 #header {
-    background-color: #252525;
+    background-color: #1f1f1f;
     color: #fff;
     padding: 1% 2%;
     margin-bottom: 0;
