--- a/www/css/end.css
+++ b/www/css/end.css
@@ -27,10 +27,22 @@ center a{
     width: 100%;
     height: 50px;
     display: flex;
-    justify-content: center;
-    align-items: center;
     overflow-x: auto; /* Abilita lo scorrimento orizzontale */
+    overflow-y: hidden;
     white-space: nowrap; /* Impedisce il ritorno a capo degli elementi */
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+#pages::-webkit-scrollbar {
+    display: none; /* Chrome, Safari */
+}
+
+@media (min-width: 734px){
+    #pages{
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 nav ul {
@@ -43,7 +55,7 @@ nav ul {
 nav ul li {
     background-color: #2a2a2a;
     display: inline-flex;
-    margin: 0 0
+    margin: 0 2px;
 }
 
 #button{
@@ -53,7 +65,7 @@ nav ul li {
     height: 50px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
-    padding: 0 10px;
+    padding: 0 8px;
 }
 
 #button:hover{
@@ -68,4 +80,8 @@ nav ul li {
     color: #fff;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
+}
+
+* {
+    box-sizing: border-box;
 }
