--- a/www/css/end.css
+++ b/www/css/end.css
@@ -48,6 +48,7 @@ center a{
 nav ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
     display: inline-flex; /* Dispone le voci in una riga */
     white-space: nowrap; /* Mantiene gli elementi su una riga */
 }
