--- a/www/css/index.css
+++ b/www/css/index.css
@@ -27,7 +27,7 @@ h1 {
     border: 1px solid white;
     background-color: #333;
     color: white;
-    padding: 1%;
+    padding: 10px;
     text-align: center;
 }
 
