--- a/www/css/index.css
+++ b/www/css/index.css
@@ -21,6 +21,11 @@ h1 {
     color: #fff;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
+    background-color: #505050;
+    margin: 30px;
+    padding: 10px;
+    border-radius: 10px;
+    border: solid #fff;
 }
 
 #input{
@@ -50,4 +55,16 @@ h1 {
 #error {
     color:rgb(200, 0, 0);
     text-decoration: underline;
+}
+
+a {
+    color:white;
+}
+
+a:hover {
+    color:rgb(148, 148, 148);
+}
+
+a:active {
+    color:rgb(77, 77, 77);
 }
