--- a/www/css/table.css
+++ b/www/css/table.css
@@ -2,4 +2,8 @@ table, tr, th, td {
     border: solid white;
     border-collapse: collapse;
     padding: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
+
+
