--- a/www/css/index.css
+++ b/www/css/index.css
@@ -96,3 +96,24 @@ p {
 img {
     border-radius: 10px;
 }
+
+#scanner {
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+    margin: 20px auto;
+    aspect-ratio: 4/3;
+    overflow: hidden;
+    border: solid white;
+    border-radius: 10px;
+    display: none;
+}
+
+#scanner video, #scanner canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover;
+}
